--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 .map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
+    width: 900px;
+    height: 700px;
+    margin: auto;
 }
+
